# music-dsp

./: .gitignore  CMakeLists.txt  README.md  chord_detector.cpp  chord_detector.h  chord_tpl.cpp  chord_tpl.h  chord_tpl_collection.cpp  chord_tpl_collection.h  config.h  fft.cpp  fft.h  lmhelpers.cpp  lmhelpers.h  lmpriority_queue.cpp  lmpriority_queue.cpp.back  lmpriority_queue.h  lmpriority_queue.h.back  lmtypes.h  music_scale.cpp  music_scale.h  pitch_calculator.cpp  pitch_calculator.h  pitch_cls_profile.cpp  pitch_cls_profile.h  pitch_detector.cpp  pitch_detector.h  window_functions.cpp  window_functions.h
client/src/: CMakeLists.txt  lmclient.cpp  lmcsr.cpp
doc/: Doxyfile
ext/: CMakeLists.txt
ext/cqtt/src/: CMakeLists.txt
ext/cqtt/src/dsp/: CMakeLists.txt
ext/kissfft/: CMakeLists.txt
ext/kissfft/tools/: kiss_fastfir.c
ext/vamp-plugin-sdk/: .hg_archival.txt  CMakeLists.txt
ext/vamp-plugin-sdk/src/vamp-sdk/: PluginAdapter.cpp
libmusic/: CMakeLists.txt
libmusic/include/: beat_detector.h  butterworth_filter.h  cheby1_filter.h  chord_detector.h  chord_tpl.h  chord_tpl_collection.h  chord_tpls_hmm.h  config.h  cqt_wrapper.h  envelope.h  fft.h  fft_point.h  fft_wrapper.h  filter.h  lmhelpers.h  lmlogger.h  lmpriority_queue.h  lmtypes.h  ma_filter.h  music_scale.h  pcp_buf.h  pitch_calculator.h  pitch_cls_profile.h  q_transform.h  recursive_filter.h  tft.h  transform.h  viterbi.h  window_functions.h
libmusic/src/: CMakeLists.txt  beat_detector.cpp  cheby1_filter.cpp  chord_detector.cpp  chord_tpl.cpp  chord_tpl.cpp.orig  chord_tpl_collection.cpp  cqt_wrapper.cpp  envelope.cpp  fft.cpp  fft_wrapper.cpp  lmhelpers.cpp  lmlogger.cpp  lmpriority_queue.cpp  lmtypes.cpp  ma_filter.cpp  music_scale.cpp  pcp_buf.cpp  pitch_calculator.cpp  pitch_cls_profile.cpp  q_transform.cpp  recursive_filter.cpp  tft.cpp  transform.cpp  viterbi.cpp  window_functions.cpp
tests/src/: CMakeLists.txt  chord_detector_test.cpp  chord_detector_test.h  fft_test.cpp  fft_test.h  helpers_test.cpp  helpers_test.h  pitch_calculator_test.cpp  pitch_calculator_test.h  test_run.cpp  viterbi_test.cpp  viterbi_test.h
tools/: tct_hmm.py
tools/DatasetExtraction/: __init__.py  chord.py  dataset.py
tools/DatasetExtraction/test_chords_txt/: 1.txt  10.txt  11.txt  12.txt  13.txt  14.txt  2.txt  3.txt  4.txt  5.txt  6.txt  7.txt  8.txt  9.txt
vamp/src/: CMakeLists.txt  parachord.cpp  parachord.h  plugins.cpp
